# sstackrr-backend

./: .env  Cargo.toml  Procfile  README.md  diesel.toml
migrations/2022-04-16-144052_create_games/: down.sql  up.sql
migrations/2022-04-20-163405_add_bot_to_game/: down.sql  up.sql
migrations/2022-04-22-183743_add_smart_bot_enum/: down.sql  up.sql
src/: adversary.rs  adversary_minimax.rs  broker.rs  db.rs  db_schema.rs  db_schema_macro.rs  game.rs  graphql.rs  main.rs  schema.rs
