[package]
name = "sstackrr-backend"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.5.1", features = ["ws", "headers"] }
hyper = { version = "0.14.18", features = ["full"] }
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = "0.1.8"
tower = "0.4.12"
tower-http = { version = "0.2.5", features = ["cors"] }
async-graphql = { version = "3.0.36", features = ["uuid"] }
async-graphql-axum = "3.0.36"
slab = "0.4.5"
num-bigint = "0.4"
rand = "0.8.5"
once_cell = "1.10.0"
num-traits = "0.2.14"
strum_macros = "0.24.0"
futures-core = "0.3.21"
futures-util = "0.3.0"
futures-channel = "0.3.0"
futures-timer = "3.0.2"
chrono = "0.4.19"
uuid = { version = "0.8", features = ["v4"] }
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "uuidv07"] }
diesel_migrations = "1.4.0"
diesel-derive-newtype = "0.1.2" # at the moment, the source code is ancient, but from PRs it seems that the maintainer hasn't still forgotten about it
diesel-derive-enum = { version = "1", features = ["postgres"] } # "postgres", "mysql" or "sqlite"
dotenv = "0.15.0"
lazy_static = "1.4.0"
moka = "0.8.2"
